# hypr-opaque-media

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  hypr-opaque-media.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: hypr-opaque-media.json  hypr-opaque-media.jsonc
docs/: architecture.md
packaging/systemd/user/: hypr-opaque-media.service
test/: test_core.py  test_events_and_main.py  test_logging_and_helpers.py  test_matcher_rules_and_connection.py
